reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_776_col_9.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:776:9: replace KnowledgeContext::embodied_at_frontier_with_facts -> Self with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace KnowledgeContext::embodied_at_frontier_with_facts -> Self with Default::default()
@@ -768,29 +768,17 @@
         viewer_actor_id: ActorId,
         current_tick: SimTick,
         event_frontier: u64,
         actor_known_workplaces: Vec<ActorKnownWorkplaceFact>,
         actor_known_food_sources: Vec<ActorKnownFoodSourceFact>,
         actor_known_sleep_affordances: Vec<ActorKnownSleepAffordanceFact>,
         actor_known_routes: Vec<ActorKnownRouteFact>,
     ) -> Self {
-        Self::embodied_at_frontier_with_all_facts(
-            viewer_actor_id,
-            current_tick,
-            event_frontier,
-            actor_known_workplaces,
-            actor_known_food_sources,
-            actor_known_sleep_affordances,
-            actor_known_routes,
-            Vec::new(),
-            Vec::new(),
-            Vec::new(),
-            Vec::new(),
-        )
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     #[allow(clippy::too_many_arguments)]
     pub fn embodied_at_frontier_with_all_facts(
         viewer_actor_id: ActorId,
         current_tick: SimTick,
         event_frontier: u64,
         actor_known_workplaces: Vec<ActorKnownWorkplaceFact>,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `KnowledgeContext: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:776:9
    |
776 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `KnowledgeContext`
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:699:1
    |
699 | pub struct KnowledgeContext {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `knowledge_context::KnowledgeContext: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:776:9
    |
776 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `knowledge_context::KnowledgeContext`
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:699:1
    |
699 | pub struct KnowledgeContext {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
